force-app/main/default/objects/Account/fields/Account_Escalation_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Escalation_Status__c</fullName>
    <label>Account Escalation Status</label>
    <type>Text</type>
    <length>80</length>
</CustomField>