force-app/main/default/objects/Account/fields/Account_Support_Level__c.field-meta.xml
<CustomField>
    <fullName>Account_Support_Level__c</fullName>
    <label>Support Level</label>
    <type>Text</type>
    <length>40</length>
</CustomField>