force-app/main/default/objects/Account/fields/ACV_In_Currency__c.field-meta.xml
<CustomField>
    <fullName>ACV_In_Currency__c</fullName>
    <label>ACV in Source Currency</label>
    <type>Number</type>
    <precision>18</precision>\n    <scale>2</scale>
</CustomField>