force-app/main/default/objects/Account/fields/Billing_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Country_Code__c</fullName>
    <label>Billing Country Code (Source)</label>
    <type>Text</type>
    <length>10</length>
</CustomField>