force-app/main/default/objects/Account/fields/Billing_State_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_State_Code__c</fullName>
    <label>Billing State Code (Source)</label>
    <type>Text</type>
    <length>10</length>
</CustomField>