force-app/main/default/objects/Account/fields/C1_Account_Rank__c.field-meta.xml
<CustomField>
    <fullName>C1_Account_Rank__c</fullName>
    <label>C1 Account Rank</label>
    <type>Text</type>
    <length>10</length>
</CustomField>