force-app/main/default/objects/Account/fields/Community_Users__c.field-meta.xml
<CustomField>
    <fullName>Community_Users__c</fullName>
    <label>Community Users</label>
    <type>Number</type>
    <precision>12</precision>\n    <scale>0</scale>
</CustomField>