force-app/main/default/objects/Account/fields/CS_Division_Stamp__c.field-meta.xml
<CustomField>
    <fullName>CS_Division_Stamp__c</fullName>
    <label>CS Division Stamp</label>
    <type>Text</type>
    <length>40</length>
</CustomField>