force-app/main/default/objects/Account/fields/CS_Experience__c.field-meta.xml
<CustomField>
    <fullName>CS_Experience__c</fullName>
    <label>CS Experience</label>
    <type>Text</type>
    <length>40</length>
</CustomField>