force-app/main/default/objects/Account/fields/Customer_Health__c.field-meta.xml
<CustomField>
    <fullName>Customer_Health__c</fullName>
    <label>Customer Health</label>
    <type>Text</type>
    <length>40</length>
</CustomField>