force-app/main/default/objects/Account/fields/Customer_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Manager_Name__c</fullName>
    <label>Customer Manager Name</label>
    <type>Text</type>
    <length>80</length>
</CustomField>