force-app/main/default/objects/Account/fields/Customer_Segment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segment__c</fullName>
    <description>Upstream CRM customer segment corresponding to the original SEGMENT_NAME source ingredient. Demo source data; not an OCX model output.</description>
    <inlineHelpText>Customer segment supplied by the upstream CRM.</inlineHelpText>
    <label>Customer Segment</label>
    <length>80</length>
    <type>Text</type>
</CustomField>