force-app/main/default/objects/Account/fields/Customer_Since_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Since_Date__c</fullName>
    <description>Upstream CRM customer start date used as a pre-model source ingredient for tenure and cohort features. Demo source data; not an OCX model output.</description>
    <inlineHelpText>Customer relationship start date from the upstream CRM source.</inlineHelpText>
    <label>Customer Since Date</label>
    <type>Date</type>
</CustomField>