force-app/main/default/objects/Account/fields/Division_Name__c.field-meta.xml
<CustomField>
    <fullName>Division_Name__c</fullName>
    <label>Division Name</label>
    <type>Text</type>
    <length>80</length>
</CustomField>