force-app/main/default/objects/Account/fields/DNB_Location_Type__c.field-meta.xml
<CustomField>
    <fullName>DNB_Location_Type__c</fullName>
    <label>DNB Location Type</label>
    <type>Text</type>
    <length>40</length>
</CustomField>