force-app/main/default/objects/Account/fields/DNB_Out_Of_Business_Status__c.field-meta.xml
<CustomField>
    <fullName>DNB_Out_Of_Business_Status__c</fullName>
    <label>DNB Out of Business Status</label>
    <type>Text</type>
    <length>40</length>
</CustomField>