force-app/main/default/objects/Account/fields/DNB_SIC4_Description__c.field-meta.xml
<CustomField>
    <fullName>DNB_SIC4_Description__c</fullName>
    <label>DNB SIC4 Description</label>
    <type>Text</type>
    <length>255</length>
</CustomField>