force-app/main/default/objects/Account/fields/DNB_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>DNB_Zip_Postal_Code__c</fullName>
    <label>DNB Zip Postal Code</label>
    <type>Text</type>
    <length>30</length>
</CustomField>