force-app/main/default/objects/Account/fields/Geo_Name__c.field-meta.xml
<CustomField>
    <fullName>Geo_Name__c</fullName>
    <label>Geo Name</label>
    <type>Text</type>
    <length>40</length>
</CustomField>