force-app/main/default/objects/Account/fields/Mintigo_Score__c.field-meta.xml
<CustomField>
    <fullName>Mintigo_Score__c</fullName>
    <label>Mintigo Score</label>
    <type>Number</type>
    <precision>6</precision>\n    <scale>2</scale>
</CustomField>