force-app/main/default/objects/Account/fields/New_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>New_Account_Owner__c</fullName>
    <label>New Account Owner</label>
    <type>Text</type>
    <length>80</length>
</CustomField>