force-app/main/default/objects/Account/fields/OCX_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>OCX_Account_ID__c</fullName>
    <description>Stable OCX account token (account_identity.stable_token). Synchronization key.</description>
    <externalId>true</externalId>
    <label>OCX Account ID</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>