force-app/main/default/objects/Account/fields/OCX_ACV__c.field-meta.xml
<CustomField>
    <fullName>OCX_ACV__c</fullName>
    <label>OCX ACV</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>