force-app/main/default/objects/Account/fields/OCX_NPS_Class__c.field-meta.xml
<CustomField>
    <fullName>OCX_NPS_Class__c</fullName>
    <label>OCX NPS Class</label>
    <length>40</length>
    <type>Text</type>
</CustomField>