force-app/main/default/objects/Account/fields/OCX_Open_Tickets__c.field-meta.xml
<CustomField>
    <fullName>OCX_Open_Tickets__c</fullName>
    <description>Deterministically synthesized (seeded hash of OCX Account ID).</description>
    <label>OCX Open Tickets</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>