force-app/main/default/objects/Account/fields/OCX_Portfolio_Count__c.field-meta.xml
<CustomField>
    <fullName>OCX_Portfolio_Count__c</fullName>
    <label>OCX Portfolio Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>