force-app/main/default/objects/Account/fields/OCX_Primary_Product__c.field-meta.xml
<CustomField>
    <fullName>OCX_Primary_Product__c</fullName>
    <label>OCX Primary Product</label>
    <length>80</length>
    <type>Text</type>
</CustomField>