force-app/main/default/objects/Account/fields/OCX_Propensity__c.field-meta.xml
<CustomField>
    <fullName>OCX_Propensity__c</fullName>
    <label>OCX Propensity</label>
    <length>40</length>
    <type>Text</type>
</CustomField>