force-app/main/default/objects/Account/fields/OCX_Renewal_Quarter__c.field-meta.xml
<CustomField>
    <fullName>OCX_Renewal_Quarter__c</fullName>
    <label>OCX Renewal Quarter</label>
    <length>20</length>
    <type>Text</type>
</CustomField>