force-app/main/default/objects/Account/fields/OCX_Revenue_Band__c.field-meta.xml
<CustomField>
    <fullName>OCX_Revenue_Band__c</fullName>
    <label>OCX Revenue Band</label>
    <length>40</length>
    <type>Text</type>
</CustomField>