force-app/main/default/objects/Account/fields/OCX_Survey_Mean_LTR__c.field-meta.xml
<CustomField>
    <fullName>OCX_Survey_Mean_LTR__c</fullName>
    <label>OCX Survey Mean LTR</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>