force-app/main/default/objects/Account/fields/OCX_Tenure__c.field-meta.xml
<CustomField>
    <fullName>OCX_Tenure__c</fullName>
    <label>OCX Tenure</label>
    <length>40</length>
    <type>Text</type>
</CustomField>