force-app/main/default/objects/Account/fields/Product_Family_List__c.field-meta.xml
<CustomField>
    <fullName>Product_Family_List__c</fullName>
    <label>Product Family List</label>
    <type>Text</type>
    <length>255</length>
</CustomField>