force-app/main/default/objects/Account/fields/Product_Family_Number__c.field-meta.xml
<CustomField>
    <fullName>Product_Family_Number__c</fullName>
    <label>Product Family Number</label>
    <type>Number</type>
    <precision>6</precision>\n    <scale>0</scale>
</CustomField>