force-app/main/default/objects/Account/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Upstream CRM region corresponding to the original REGION_NAME source ingredient. Demo source data; not an OCX model output.</description>
    <inlineHelpText>Customer region supplied by the upstream CRM.</inlineHelpText>
    <label>Region</label>
    <length>80</length>
    <type>Text</type>
</CustomField>