force-app/main/default/objects/Account/fields/Renewals_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Renewals_Manager_Name__c</fullName>
    <label>Renewals Manager Name</label>
    <type>Text</type>
    <length>80</length>
</CustomField>