force-app/main/default/objects/Account/fields/Shipping_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Country_Code__c</fullName>
    <label>Shipping Country Code (Source)</label>
    <type>Text</type>
    <length>10</length>
</CustomField>