force-app/main/default/objects/Account/fields/Source_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Account_Type__c</fullName>
    <label>Account Type (Source)</label>
    <type>Text</type>
    <length>40</length>
</CustomField>