force-app/main/default/objects/Account/fields/Source_ACV__c.field-meta.xml
<CustomField>
    <fullName>Source_ACV__c</fullName>
    <description>Raw pre-analytics ACV source ingredient loaded from the customer profile source. Kept physically separate from OCX_ACV__c, which is a downstream Customer AI field.</description>
    <label>Source ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>