force-app/main/default/objects/Account/fields/Source_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Source_Created_Date__c</fullName>
    <label>Created Date (Source)</label>
    <type>Date</type>

</CustomField>