force-app/main/default/objects/Account/fields/Source_Currency__c.field-meta.xml
<CustomField>
    <fullName>Source_Currency__c</fullName>
    <label>Currency (Source)</label>
    <type>Text</type>
    <length>3</length>
</CustomField>