force-app/main/default/objects/Account/fields/Source_Currency_Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>Source_Currency_Conversion_Rate__c</fullName>
    <label>Currency Conversion Rate (Source)</label>
    <type>Number</type>
    <precision>18</precision>\n    <scale>6</scale>
</CustomField>