force-app/main/default/objects/Account/fields/Source_Industry__c.field-meta.xml
<CustomField>
    <fullName>Source_Industry__c</fullName>
    <label>Industry (Source)</label>
    <type>Text</type>
    <length>255</length>
</CustomField>