force-app/main/default/objects/Account/fields/Source_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Owner_Name__c</fullName>
    <label>Source Owner Name</label>
    <type>Text</type>
    <length>80</length>
</CustomField>