force-app/main/default/objects/Account/fields/Super_User_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Super_User_Ratio__c</fullName>
    <label>Super User Ratio</label>
    <type>Number</type>
    <precision>8</precision>\n    <scale>4</scale>
</CustomField>