force-app/main/default/objects/Account/fields/Super_Users__c.field-meta.xml
<CustomField>
    <fullName>Super_Users__c</fullName>
    <label>Super Users</label>
    <type>Number</type>
    <precision>12</precision>\n    <scale>0</scale>
</CustomField>