force-app/main/default/objects/Account/fields/Territory_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Territory_Manager_Name__c</fullName>
    <label>Territory Manager Name</label>
    <type>Text</type>
    <length>80</length>
</CustomField>