force-app/main/default/objects/Account/listViews/All_Bongo_Accounts.listView-meta.xml
<ListView>
    <fullName>All_Bongo_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>OCX_NPS_Class__c</columns>
    <columns>OCX_Propensity__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OCX_NPS_Class__c</field>
        <operation>equals</operation>
        <value>Detractor</value>
    </filters>
    <label>All Bongo Accounts</label>
</ListView>